# rpaper

./: .gitignore  Cargo.toml  LICENSE  Makefile  config.json  readme.md  rpaper.desktop  rpaper_cache.spec  template_example.template
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: display.rs  lib.rs
configs/: color_variables.json  config.json
daemon/: Cargo.toml
daemon/src/: main.rs
daemon/src/colorscheme/: colors.rs  colorvariable.rs  mod.rs  rwal.rs  scheme.rs  template.rs
daemon/src/colorscheme/colors/: color.rs  hex.rs  hsv.rs  mod.rs  rgb.rs
daemon/src/colorscheme/rwal/: actions.rs  mod.rs  rwal.rs  rwal_params.rs
daemon/src/daemon/: config.rs  config_watcher.rs  daemon.rs  directory_watcher.rs  mod.rs  request.rs  socket_listener.rs
daemon/src/logger/: logger.rs
daemon/src/template/: mod.rs  parser.rs  tags.rs  template.rs
daemon/src/wallpaper/: display.rs  image.rs  mod.rs
md/: configure.md  install.md  update.md  use.md
src/: argparser.rs  cache.py  colorvariables.rs  config.rs  displays.rs  log.rs  main.rs  rwal.rs  templates.rs  utils.rs  wallpaper.rs
src/utils/: command.rs  config.rs  directory.rs  helpmessage.rs  helpmessages.rs  logger.rs  mod.rs  name.rs
