[package]
name = "rpaper"
description = "Wallpaper setter & color palette generator written on rust."
version = "0.2.261024"
edition = "2021"
authors = ["prepodobnuy <zvfvbycsy6@gmail.com>"]
license = "MIT"
repository = "https://github.com/Prepodobnuy/rpaper"

[dependencies]
color_space = "0.5.4"
image = "0.25.4"
kmeans_colors = "0.6.0"
palette = "0.7.6"
rand = "0.8.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
