[workspace]
resolver = "2"
members = ["client", "daemon", "common"]
default-members = ["client", "daemon"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
description = "Wallpaper setter & color palette generator written on rust."
version = "0.1.28012025"
authors = ["Prepodobnuy <prepodobnuy@inbox.ru>"]
license = "MIT"
license-file = "LICENSE"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

module-name-repetitions = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
