[package]
name = "rpaper-daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
chrono = "0.4.40"
color_space = "0.5.4"
hex = "0.4.3"
image = "0.25.5"
kmeans_colors = "0.6.0"
mio = "1.0.3"
palette = "0.7.6"
sha2 = "0.10.8"
sysinfo = "0.33.1"
rand = "0.9.0"
common = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.133"
nix = { version = "0.29.0", features = ["process"] }
